# asfasign

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  allowed_signers
.config/: nextest.toml
.github/workflows/: client-server-integration.yml  run_tests.yml
admin-lib/: Cargo.toml
admin-lib/src/: auth.rs  error.rs  lib.rs
admin-lib/src/client/: v1.rs
agents/: code-documentation.md  code.md  developer.md  producing_better_code.md  project-description.md  reviewer.md  tester.md  tests.md
aggregate_signature/: Cargo.toml
aggregate_signature/src/: lib.rs  revocation.rs
client-cli/: Cargo.toml
client-cli/src/: cli.rs  commands.rs  error.rs  lib.rs  main.rs  output.rs  rest_client.rs  utils.rs
client-cli/src/commands/: add_to_aggregate.rs  download.rs  is_agg_complete.rs  keys.rs  list_pending.rs  register_release.rs  register_repo.rs  revoke.rs  sign_file.rs  sign_pending.rs  signers_file.rs  update_signers.rs  verify_sig.rs
client-cli/src/rest_client/: v1.rs
client-cli/tests/: download_test.rs  json_output_test.rs  register_release_test.rs  register_repo_test.rs
client-cli/tests/scripts/: test_complete_chain.tx
client-lib/: Cargo.toml  README.md
client-lib/examples/: simple_download.rs
client-lib/src/: backend.rs  constants.rs  download.rs  error.rs  lib.rs  types.rs  verification.rs
client-lib/src/download/: github.rs  revocation.rs  v1.rs
common/: Cargo.toml
common/src/: errors.rs  lib.rs
common/src/fs/: names.rs
core/aggregate_signature/: Cargo.toml
core/aggregate_signature/src/: lib.rs  revocation.rs
core/common/: Cargo.toml
core/common/src/: errors.rs  fs.rs  lib.rs  test_helpers.rs
core/common/src/fs/: names.rs
core/constants/: Cargo.toml
core/constants/src/: lib.rs
core/features_lib/: Cargo.toml
core/features_lib/src/: lib.rs
core/integration_tests/: Cargo.toml
core/integration_tests/tests/: basic_flow.rs
core/signatures/: Cargo.toml
core/signatures/src/: keys.rs  types.rs
core/signatures/src/keys/: minisign.rs
core/signatures/src/types/: tests.rs
core/signers_file/: Cargo.toml
core/signers_file/src/: lib.rs
core/signers_file_types/: Cargo.toml
core/signers_file_types/src/: lib.rs  revocation.rs
core/test_helpers/: Cargo.toml
core/test_helpers/fixtures/keys/: key_0  key_0.pub  key_1  key_1.pub  key_2  key_2.pub  key_3  key_3.pub  key_4  key_4.pub  key_5  key_5.pub  key_6  key_6.pub  key_7  key_7.pub  key_8  key_8.pub  key_9  key_9.pub
core/test_helpers/src/: lib.rs  scenarios.rs  signers_setup.rs
docs/: crux-pattern.md
docs/plans/: 2025-01-02-crux-pattern-implementation.md
docs/usage/: pending-signatures-workflow.md
file-auth/forge-url/: Cargo.toml
file-auth/forge-url/src/: error.rs  forge_info.rs  github.rs  gitlab.rs  lib.rs  traits.rs
integration_tests/: Cargo.toml
integration_tests/tests/: basic_flow.rs
rest-api/: AGENTS.md  Cargo.toml  Makefile  README.md  run.README.sh  run.client.sh  run.sh
rest-api/src/: actors.rs  auth_middleware.rs  auth_test.rs  config.rs  constants.rs  environment.rs  error.rs  file_auth.rs  git_actor.rs  handlers.rs  helpers.rs  lib.rs  main.rs  models.rs  path_validation.rs  server.rs  state.rs  traces.rs
rest-api/src/actors/: git_actor.rs  github_project_authenticator.rs  github_release_actor.rs  nonce_cache_actor.rs  nonce_cleanup_actor.rs  repo_handler.rs  signature_collector.rs  signers_initialiser.rs
rest-api/src/file_auth/: actors.rs  forges.rs  forges_types.rs  github.rs  github_release.rs  gitlab.rs  gitlab_release.rs  index_types.rs  mod.rs  release_types.rs  releasers.rs  releases.rs
rest-api/src/file_auth/actors/: forge_signers_validator.rs  git_actor.rs  github_release_actor.rs  release_actor.rs  signature_collector.rs  signers_initialiser.rs
rest-api/src/file_auth/github/: mod.rs
rest-api/src/file_auth/github/actors/: github_project_validator.rs  mod.rs
rest-api/src/pending_discovery/: mod.rs  walkdir_impl.rs
rest-api/src/v1/: routes.rs
rest-api/tests/: api_test_helpers.rs  auth_tests.rs  files_endpoint_test.rs  github_release_test.rs  gitlab_integration.rs  integration_pending_workflow.rs  integration_tests.rs
rest-api/tests/effects/: git_actor_effects_tests.rs
rest-api/tests/unit/: git_actor_tests.rs
rest_api_auth/: Cargo.toml
rest_api_auth/src/: lib.rs
rest_api_test_helpers/: Cargo.toml
rest_api_test_helpers/src/: lib.rs
rest_api_types/: Cargo.toml
rest_api_types/src/: lib.rs
rest_api_types/tests/: register_github_release_request_test.rs
signatures/: Cargo.toml  Makefile
signatures/src/: keys.rs  lib.rs  schemes.rs
signatures/src/keys/: minisign.rs
signers_file/: Cargo.toml
signers_file/src/: lib.rs
signers_file_types/: Cargo.toml
signers_file_types/src/: lib.rs  revocation.rs
test_helpers/: Cargo.toml
test_helpers/src/: lib.rs
tests/client-server-integration-tests/: Cargo.toml  Makefile  README.md
tests/client-server-integration-tests/src/: lib.rs  test_harness.rs
tests/client-server-integration-tests/tests/: integration_tests.rs
tests/e2e_tests/: README  basic_flow.sh  run.client.sh
tests/e2e_tests/lib/: backend_assertions.sh  constants.sh  helpers.sh  urls.sh
user_lib/: Cargo.toml
user_lib/src/: lib.rs
