[workspace]
members = [
  "core/signatures",
  "core/signers_file",
  "core/aggregate_signature",
  "core/test_helpers",
  "core/common",
  "core/signers_file_types",
  "core/integration_tests",
  "core/features_lib",
  "client-cli",
  "rest-api",
  "rest_api_test_helpers",
  "rest_api_types",
  "rest_api_auth", "core/constants",
]
exclude = ["rest_api_auth", "client_cli"]

[workspace.lints.clippy]
