[package]
name = "aggregate_signature"
version = "0.1.0"
edition = "2024"

[dependencies]
signatures = { path = "../signatures" }
signers_file = { path = "../signers_file" }
thiserror = "2.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[dev-dependencies]
tempfile = "3.21.0"
minisign = "0.7.9"
