[package]
name = "aggregate_signature"
version = "0.1.0"
edition = "2024"

[dependencies]
signatures = { path = "../signatures" }
signers_file_types = { path = "../signers_file_types/" }
thiserror = "2.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
common = { path = "../common/" }
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.21.0"
minisign = "0.8.0"
test_helpers = { path = "../test_helpers/" }
anyhow = "1.0.99"

[lints]
workspace = true
