[package]
name = "client-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
rpassword = "7.4.0"
features_lib = { path = "../core/features_lib/" }
zxcvbn = "3.1.0"
serde_json = "1.0"
chrono = "0.4"
rest_api_auth = { path = "../rest_api_auth/" }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
signatures = { version = "0.1.0", path = "../core/signatures" }
minisign = "0.8.0"

[lints]
workspace = true
