[package]
name = "client-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
rpassword = "7.4.0"
features_lib = { path = "../core/features_lib/" }
zxcvbn = "3.1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
admin-lib = { path = "../admin-lib" }
signatures = { version = "0.1.0", path = "../core/signatures" }
signers_file_types = { path = "../core/signers_file_types" }
minisign = "0.8.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
rest_api_types = { path = "../rest_api_types" }
sha2 = "0.10"
hex = "0.4"
client-lib = { path = "../client-lib" }
forge-url = { path = "../file-auth/forge-url" }
url = "2.5"

[dev-dependencies]
mockito = "1.2"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[lints]
workspace = true
