[package]
name = "client-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
features_lib = { path = "../core/features_lib/" }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
signatures = { version = "0.1.0", path = "../core/signatures" }
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde_json = "1.0"

[lints]
workspace = true
