[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
minisign = { git = "https://github.com/jedisct1/rust-minisign", rev = "fe7afaf" }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"

[lints]
workspace = true

[dev-dependencies]
anyhow = "1.0.99"
tempfile = "3.21.0"
