[package]
name = "rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["json"] }
config = "0.15.19"
tokio = { version = "1.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "fs",
  "io-util",
  "time",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kameo = "0.19.2"
async-trait = "0.1"
futures-util = "0.3"
thiserror = "2.0.17"
log = "0.4"
env_logger = "0.11.8"
rest_api_types = { path = "../rest_api_types/" }
rest_api_auth = { path = "../rest_api_auth/" }
hyper = "1.0"
normalize-path = "0.2.1"
git2 = "0.20.3"
sled = "0.34"
chrono = "0.4"
uuid = "1.19.0"

[dev-dependencies]
reqwest = { version = "0.12.26", features = ["json"] }
tempfile = "3.4"
tokio = { version = "1.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "fs",
  "io-util",
  "time",
] }
tokio-test = "0.4"
test_helpers = { path = "../core/test_helpers/" }
anyhow = "1.0.100"
rest_api_types = { path = "../rest_api_types/" }
rest_api_test_helpers = { path = "../rest_api_test_helpers/" }
features_lib = { path = "../core/features_lib/" }
chrono = "0.4"
sled = "0.34"
uuid = { version = "1.0", features = ["v4"] }

[lints]
workspace = true
