[package]
name = "rest-api"
version = "0.1.0"
edition = "2024"

[features]
test-utils = ["httpmock"]

[dependencies]
httpmock = { version = "0.7", optional = true }
axum = { version = "0.8.7", features = ["json"] }
config = "0.15.19"
tokio = { version = "1.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "fs",
  "io-util",
  "time",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kameo = "0.19.2"
futures-util = "0.3"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.6", features = [
  "trace",
  "request-id",
  "util",
  "limit",
] }
tower_governor = "0.8"
rest_api_types = { path = "../rest_api_types/" }
rest_api_auth = { path = "../rest_api_auth/" }
hyper = "1.0"
normalize-path = "0.2.1"
reqwest = { version = "0.13", features = ["json", "stream"] }
git2 = "0.20.3"
sled = "0.34"
chrono = "0.4"
signers_file = { path = "../core/signers_file/" }
signers_file_types = { path = "../core/signers_file_types/" }
signatures = { path = "../core/signatures/" }
features_lib = { path = "../core/features_lib/" }
common = { path = "../core/common/" }
constants = { path = "../core/constants/" }
uuid = "1.19.0"
futures = "0.3.31"
url = "2.5"
forge-url = { path = "../file-auth/forge-url" }
walkdir = "2.5"
octocrab = { version = "0.49.5", features = ["rustls-ring"] }
gitlab = "0.1808"
rustls = { version = "0.23.36", features = ["ring"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
urlencoding = "2.1"
regex = "1.12.2"

[dev-dependencies]
tempfile = "3"
axum-test = "18.5.0"
tower = "0.5"
tokio = { version = "1.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "fs",
  "io-util",
  "time",
] }
tokio-test = "0.4"
test_helpers = { path = "../core/test_helpers/" }
anyhow = "1.0.100"
rest_api_types = { path = "../rest_api_types/" }
rest_api_test_helpers = { path = "../rest_api_test_helpers/" }
features_lib = { path = "../core/features_lib/" }
chrono = "0.4"
signers_file_types = { path = "../core/signers_file_types/" }
sled = "0.34"
uuid = { version = "1.0", features = ["v4"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
forge-url = { path = "../file-auth/forge-url", features = ["test-utils"] }
[lints]
workspace = true
