[package]
name = "rest_api_test_helpers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
rest_api_types = { path = "../rest_api_types/" }
rest-api = { path = "../rest-api/" }
git2 = "0.20.3"
serde = "1.0.228"
serde_json = "1.0.148"

[lints]
workspace = true
