[package]
name = "rest_api_types"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
git2 = "0.20.3"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = "1.48.0"
hyper = "1.0"
rest_api_auth = { path = "../rest_api_auth/" }
common = { path = "../core/common/" }
sled = "0.34.7"
config = "0.15.19"
url = { version = "2.5.8", features = ["serde"] }
octocrab = "0.49.5"
rustls = "0.23.36"

[lints]
workspace = true
