[package]
name = "signatures"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
minisign = { git = "https://github.com/jedisct1/rust-minisign", rev = "fe7afaf" }
serde_json = "1.0.143"
thiserror = "2.0.12"
common = { path = "../common/" }

[dev-dependencies]
anyhow = "1.0.98"
tempfile = "3.20.0"
test_helpers = { path = "../test_helpers/" }

[lints]
workspace = true
