[package]
name = "signers_file"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
minisign = { git = "https://github.com/jedisct1/rust-minisign", rev = "fe7afaf" }
signatures = { path = "../signatures/" }
thiserror = "2.0.16"
tempfile = "3.21.0"
sha2 = "0.10.9"
anyhow = "1.0.99"
common = { path = "../common/" }

[dev-dependencies]
test_helpers = { path = "../test_helpers/" }
tempfile = "3.21.0"
