[package]
name = "user_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common/" }
signatures = { path = "../signatures/" }
signers_file = { path = "../signers_file/" }
signers_file_types = { path = "../signers_file_types/" }
aggregate_signature = { path = "../aggregate_signature/" }
thiserror = "2.0.17"

[lints]
workspace = true
