[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
base64 = "0.22.1"
hex = "0.4.3"
minisign = "0.8.0"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
anyhow = "1.0.99"
tempfile = "3.21.0"
constants = { path = "../constants/" }

[lints]
workspace = true

[dev-dependencies]
anyhow = "1.0.99"
tempfile = "3.21.0"
test_helpers = { path = "../test_helpers/" }
