[package]
name = "features_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common/" }
constants = { path = "../constants/" }
rest_api_types = { path = "../../rest_api_types" }
signatures = { path = "../signatures/" }
signers_file = { path = "../signers_file/" }
signers_file_types = { path = "../signers_file_types/" }
aggregate_signature = { path = "../aggregate_signature/" }
thiserror = "2.0.17"

[lints]
workspace = true
