[package]
name = "features_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common/" }
constants = { path = "../constants/" }
rest_api_types = { path = "../../rest_api_types" }
signatures = { path = "../signatures/" }
signers_file = { path = "../signers_file/" }
signers_file_types = { path = "../signers_file_types/" }
aggregate_signature = { path = "../aggregate_signature/" }
thiserror = "2.0.17"

[dev-dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
serde_json = "1.0.142"
tempfile = "3.21.0"
test_helpers = { path = "../test_helpers/" }

[lints]
workspace = true
