[package]
name = "integration_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
common = { path = "../common/" }
signatures = { path = "../signatures/" }
signers_file = { path = "../signers_file/" }
signers_file_types = { path = "../signers_file_types/" }
aggregate_signature = { path = "../aggregate_signature/" }
features_lib = { path = "../features_lib/" }
tempfile = "3.21.0"
test_helpers = { path = "../test_helpers/" }
minisign = "0.8.0"

[lints]
workspace = true
