[package]
name = "test_helpers"
version = "0.1.0"
edition = "2024"

[dependencies]
signatures = { path = "../signatures" }
minisign = "0.8.0"
constants = { path = "../constants/" }
common = { path = "../common/" }
signers_file_types = { path = "../signers_file_types/" }
anyhow = "1.0.100"
chrono = "0.4.43"
tempfile = "3.15.0"
serde_json = "1.0"

[lints]
workspace = true
